msre transient section additions

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -964,6 +964,14 @@ codes.},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\2U45NTZE\\Cervi et al. - 2019 - Development of an SP3 neutron transport solver for.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\JDS5R3Y4\\S0029549319300354.html:text/html},
 }
 
+@techreport{rearden_scale_2018,
+	title = {{SCALE} {Code} {System}, {Version} 6.2},
+	number = {ORNL/TM-2005/39},
+	institution = {Oak Ridge National Laboratory, Oak Ridge, Tennessee},
+	author = {Rearden, B. T. and Jesse, M.A.},
+	year = {2018},
+}
+
 @article{rykhlevskii_modeling_2019,
 	title = {Modeling and simulation of online reprocessing in the thorium-fueled molten salt breeder reactor},
 	volume = {128},
@@ -4000,4 +4008,35 @@ NTRS Document ID: 19980218172
 NTRS Research Center: Langley Research Center (LaRC)},
 	keywords = {Aerodynamics},
 	file = {19980218172.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\MAI8GC4N\\Krist et al. - 1998 - CFL3D User's Manual (Version 5.0).pdf:application/pdf;Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\RT2WNTSS\\19980218172.html:text/html},
+}
+
+@phdthesis{reynolds_multilevel_2020,
+	address = {Corvallis, OR},
+	type = {{PhD} {Dissertation}},
+	title = {A {Multilevel} {Nonlinear} {Projective} {Method} for {Circulating} {Fuel} {Reactor} {Kinetics}},
+	url = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/f1881t34d},
+	abstract = {Circulating fuel reactor (CFR) kinetics are characterized by delayed neutron precursor (DNP) drift in addition to the neutronic and thermal hydraulic phenomena typical of other reactor types. This environment can be computationally challenging to model, given that the multiphysics phenomena generally have non-linear interdependencies requiring the use of iterative solution techniques. In this work, a multilevel nonlinear projective method in RZ geometry is presented which calculates a transport solution to the CFR kinetics problem. This approach offers computational savings by coupling the multiphysics phenomena to low-order quasi-diffusion equations. The method is verified with the method of manufactured solutions. A residual-balanced algorithm for multilevel coupling is presented and shown to mitigate oversolving when compared to a standard fixed point iteration scheme. Transient and steady-state simulations demonstrating the influence of the DNP drift phenomena are shown, as well as a comparison to results from the Molten Salt Reactor Experiment. The importance of capturing transport effects when simulating channel-type CFRs is also investigated, and are found to produce average variations of 2-3\% in the two-group fluxes when compared to the P1 approximation.},
+	school = {Oregon State University},
+	author = {Reynolds, Aaron J.},
+	month = nov,
+	year = {2020},
+	file = {Reynolds - 2020 - A Multilevel Nonlinear Projective Method for Circu.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\RV6MRNJL\\Reynolds - 2020 - A Multilevel Nonlinear Projective Method for Circu.pdf:application/pdf},
+}
+
+@article{adams_subcell_1997,
+	title = {Subcell balance methods for radiative transfer on arbitrary grids},
+	volume = {26},
+	issn = {0041-1450},
+	url = {https://doi.org/10.1080/00411459708017924},
+	doi = {10.1080/00411459708017924},
+	abstract = {We present a new spatial discretization method, which enforces conservation on quadrilateral subcells in an arbitrarily connected grid of polygonal cells, for two-dimensional radiative transfer problems. We review what is known about the performance of existing methods for optically thick, diffusive regions of radiative transfer problems, focusing in particular on bilinear discontinuous (BLD) finite-element methods and the simple corner-balance (SCB) method. We discuss the close relation of the SCB and BLD methods, and how they differ. By careful analysis, we relate specific properties of the SCB solution to specific approximations in the SCB method. We then build our new method by discarding those SCB approximations that lead to undesirable properties and carefully constructing new approximations designed to yield more desirable properties. We compare BLD, SCB. and the new scheme on a series of test problems in slab and XY geometries; numerical results invariably agree with predictions of the analysis. The new method matches SCB in thick diffusive regions, as it was designed to, but vastly outperforms SCB given cells of fine and intermediate optical thickness, where it achieves results comparable to BLD.},
+	number = {4-5},
+	urldate = {2024-10-04},
+	journal = {Transport Theory and Statistical Physics},
+	author = {Adams, Marvin L.},
+	month = jan,
+	year = {1997},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/00411459708017924},
+	pages = {385--431},
 }
