--- a/lit.tex
+++ b/lit.tex
@@ -704,6 +704,7 @@ methods provide reasonable flux solutions for calculating global and intermediat
 they do not capture detailed heterogeneous flux distribution within each coarse-mesh subregion.
 
 \subsection{Transport-Correction Techniques With Neutron Diffusion-Based Solvers}
+\label{sec:lit-tc}
 
 Transport-correction techniques for diffusion-based solvers require additional information beyond
 conventional homogenized group constants from transport-based solvers to ameliorate diffusion
